@@ -1,3 +1,12 @@
+2002-04-03  Martin Weber <martweb@gmx.net>
+
+	* exception.h (at_exception_new): Fix wrong 
+	parameter declaration.
+
+	* input-pnm.c (struct _PNMRowInfo): Removed.
+
+	Message-ID: <3CA9F839.6A4C291C@gmx.net>.
+	
 2002-03-30  Martin Weber <martweb@gmx.net>
 
 	* output-swf.c (output_swf_writer): printed
